--- a/ansible-configure-ubuntu/first_playbook.yml
+++ b/ansible-configure-ubuntu/first_playbook.yml
@@ -36,11 +36,13 @@
         mode: '0777'
         
     - name: Install a .deb package
-      ansible.builtin.apt:
+      apt:
         deb: /tmp/rstudio-server-2021.09.0-351-amd64.deb
     
     - name: Execute the command in remote shell
-      ansible.builtin.shell: install-azure-cli.sh >> install-azure-cli.log
+      script:
+       cmd: sh install-azure-cli.sh >> install-azure-cli.log
+      
     - name: Run the equivalent of "apt-get update" as a separate step
       ansible.builtin.apt:
         update_cache: yes
