--- a/ansible-configure-ubuntu/first_playbook.yml
+++ b/ansible-configure-ubuntu/first_playbook.yml
@@ -51,3 +51,7 @@
       apt:
         pkg:
         - azure-cli
+        
+    - name: Execute the azure login command in remote shell
+      script:
+       cmd: login-azure-cli.sh >> login-azure-cli.log
