--- a/ansible-configure-ubuntu/first_playbook.yml
+++ b/ansible-configure-ubuntu/first_playbook.yml
@@ -58,6 +58,8 @@
         name: kubectl
         classic: true
     
-    - name: Execute the azure login command in remote shell
-      script:
-       cmd: login-azure-cli.sh > login-azure-cli.log
+    - name: "Execute multiple commands"
+      shell: |
+        az login -u asreet-tech@atttrainings.com -p Azure@123456 > az-login.log
+        az aks get-credentials --resource-group rg-aks-0 --name aks-0 >> > az-login.log
+        
