--- a/ansible-configure-ubuntu/first_playbook.yml
+++ b/ansible-configure-ubuntu/first_playbook.yml
@@ -16,6 +16,12 @@
     - name: Upgrade all apt packages
       apt: upgrade=dist force_apt_get=yes
     
+    - name: Add deployer user and add it to sudo
+      user: 
+        name: aksuser
+        group: sudo
+        password: AksUser%45hY
+
     - name: Install a list of packages
       apt:
         pkg:
